<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_gui</name>
  <version>1.0.0</version>
  <description>Simple GUI that publishes a twist message linear.x and angular.z to any topic.</description>
  <license>TODO: License declaration</license>
  <maintainer email="ray@todo.todo">ray</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>qt6-base-dev</build_depend>
  <exec_depend>qt6-base-dev</exec_depend>
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
